Changes for 1.0alpha12:

 - minor fixes in doc/manual.txt (Alexei)
 - minor fixes in INSTALL (Alexei)
 - added support for check_port[*], which tries to connect to the port (Aelxei)

 - new type of parameters: parameter[*], actual value of "*" can
 be passed from Zabbix server (Alexei)
 - zabbix_agentd will lower scheduling priority to 5 (Alexei)
 - fixed broken customized graphs, file chart2.html (Alexei)

Changes for 1.0alpha11:

 - minor changes in manual.txt (Alexei)
 - added support for swap[free] and swap[total] for Solaris (Alexei)
 - added define HAVE_PROC_LOADAVG (Alexei)
 - parameter tcp_count is not supported anymore (Alexei)
 - no warnings for bcopy anymore under Solaris (Alexei)
 - changes in AUTHORS (Alexei)
 - fixes in function PROCCNT (Alexei)
 - changes in documentation (Mike)
 - simplified tcp_listen procedure in zabbix_trapperd.c (Alexei)
 - simplified tcp_listen procedure in zabbix_agentd.c (Alexei)
 - no full list of triggers and items will be shown (Alexei)
 - deleted column triggers.lastcheck (Alexei)
 - fixed PostgreSQL upgrade patch to 1.0alpha10 (Alexei)
 - if item.history==0, not values will be added to table history for this item (Alexei)
 - added directory upgrades/dbpatches/1.0alpha10_to_1.0alpha11/ (Alexei)
 - added set of keys proc_cnt[*] (Alexei)
 - when pressing Acive in list of items, [all] selected unstead of [Server]. Fixed. (Alexei)
 - some triggers have incorrect status. Fixed. (Alexei)
 - global variable $ERROR_MSG will show details of operation failure (Alexei)
 - fixed both zabbix_trapper and zabbix_trapper to correctly change status of triggers (Alexei)

Changes for 1.0alpha10:

 - added support for trigger dependencies
 - added column dep_level to table TRIGGERS
 - added new host type: Workstation + frontends/php/images/sysmaps/Workstation.png
 - added table triger_depends
 - calls to perror() were changed to syslog() where possible
 - added status line to full screen version of form "Status of Triggers"